--- a/css/style.css
+++ b/css/style.css
@@ -135,6 +135,11 @@ main {
 }
 
 @media only screen and (max-width: 600px) {
+    .p-title {
+        text-align: center;
+        font-size: 10px;
+    }
+
     main {
         flex-direction: column;
     }
